syntax = "proto3";

option go_package = "github.com/n0izn0iz/vm-vst-bridge/pkg/vstbridge;vstbridge";

package vstbridge;

// Interface exported by the server.
service VSTBridge {
  rpc Echo(Echo.Request) returns (Echo.Reply) {}

  // Processing
  rpc ProcessReplacing(ProcessReplacing.Request) returns (ProcessReplacing.Reply) {}
  rpc ProcessDoubleReplacing(ProcessDoubleReplacing.Request) returns (ProcessDoubleReplacing.Reply) {}

  // Parameters
  rpc GetParameter(GetParameter.Request) returns (GetParameter.Reply) {}
  rpc SetParameter(SetParameter.Request) returns (SetParameter.Reply) {}
}

message ProcessReplacing {
  message Request {
    repeated FloatArray inputs = 1;
    int32 sampleFrames = 2;
  }
  message Reply {
    repeated FloatArray outputs = 1;
  }
}

message ProcessDoubleReplacing {
  message Request {
    repeated DoubleArray inputs = 1;
    int32 sampleFrames = 5;
  }
  message Reply {
    repeated DoubleArray outputs = 1;
  }
}

message GetParameter {
  message Request {
    int32 index = 1;
  }
  message Reply {
    float value = 1;
  }
}

message SetParameter {
  message Request {
    int32 index = 1;
    float value = 2;
  }
  message Reply {
  }
}

message Echo {
  message Request {
    string str = 1;
  }
  message Reply {
    string str = 1;
  }
}

message FloatArray {
  repeated float data = 1;
}

message DoubleArray {
  repeated double data = 1;
}
